refactor(sandbox): 重构 Java 本地代码沙箱
-移除了未使用的代码和导入- 优化了代码执行流程，使用 ProcessBuilder 替代 Runtime.exec
- 添加了线程池来处理代码执行，提高了性能
- 改进了错误处理和超时处理机制
- 调整了代码结构，提高了可读性和可维护性