@@ -3,8 +3,6 @@ package fun.timu.sandbox;
 import cn.hutool.core.io.FileUtil;
 import cn.hutool.core.io.resource.ResourceUtil;
 import cn.hutool.core.util.StrUtil;
-import cn.hutool.dfa.FoundWord;
-import cn.hutool.dfa.WordTree;
 import fun.timu.sandbox.model.ExecuteCodeRequest;
 import fun.timu.sandbox.model.ExecuteCodeResponse;
 import fun.timu.sandbox.model.ExecuteMessage;
@@ -12,12 +10,14 @@ import fun.timu.sandbox.model.JudgeInfo;
 import fun.timu.sandbox.utils.ProcessUtils;
 
 import java.io.File;
-import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
 
 public class JavaNativeCodeSandbox implements CodeSandbox {
     private static final String GLOBAL_CODE_DIR_NAME = "tmpCode";
@@ -25,14 +25,6 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
 
     private static final long TIME_OUT = 5000L;
 
-    private static final List<String> blackList = Arrays.asList("Files", "exec");
-    private static final WordTree WORD_TREE;
-
-    static {
-        // 初始化字典树
-        WORD_TREE = new WordTree();
-        WORD_TREE.addWords(blackList);
-    }
 
     public static void main(String[] args) {
         JavaNativeCodeSandbox javaNativeCodeSandbox = new JavaNativeCodeSandbox();
@@ -66,55 +58,51 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
         // 获取编程语言信息，目前该方法未使用此参数
         String language = executeCodeRequest.getLanguage();
 
-        //  校验代码中是否包含黑名单中的命令（不好用）
-        FoundWord foundWord = WORD_TREE.matchWord(code);
-        if (foundWord != null) {
-            System.out.println("包含禁止词：" + foundWord.getFoundWord());
-            return null;
-        }
-
         // 1) 把用户的代码保存为文件
-        // 获取当前项目的根目录路径
         String userDir = System.getProperty("user.dir");
-        // 组合得到全局代码目录的路径
         String globalCodePathName = userDir + File.separator + GLOBAL_CODE_DIR_NAME;
-        // 检查全局代码目录是否存在，如果不存在则创建
         if (!FileUtil.exist(globalCodePathName)) FileUtil.mkdir(globalCodePathName);
-        // 生成用户代码的父目录路径，使用UUID以确保唯一性(隔离存放)
         String userCodeParentPath = globalCodePathName + File.separator + UUID.randomUUID();
-        // 组合得到用户代码文件的完整路径
         String userCodePath = userCodeParentPath + File.separator + GLOBAL_JAVA_CLASS_NAME;
-        // 将用户代码保存到文件系统中
         File userCodeFile = FileUtil.writeString(code, userCodePath, StandardCharsets.UTF_8);
-
 
         // 2) 编译代码，得到 class 文件
         String compileCmd = String.format("javac -encoding utf-8 %s", userCodeFile.getAbsolutePath());
+
         try {
-            Process compileProcess = Runtime.getRuntime().exec(compileCmd);
+            ProcessBuilder compileProcessBuilder = new ProcessBuilder(compileCmd.split(" "));
+            compileProcessBuilder.directory(new File(userCodeParentPath));
+            Process compileProcess = compileProcessBuilder.start();
             ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(compileProcess, "编译");
             System.out.println(executeMessage);
+            if (StrUtil.isNotBlank(executeMessage.getErrorMessage())) {
+                return getErrorResponse(executeMessage.getErrorMessage());
+            }
         } catch (Exception e) {
             return getErrorResponse(e);
         }
 
         // 3) 执行代码，得到输出结果
         List<ExecuteMessage> executeMessageList = new ArrayList<>();
+        ExecutorService executorService = Executors.newSingleThreadExecutor();
         for (String inputArgs : inputList) {
-            String runCmd = String.format("java -cp %s Main %s", userCodeParentPath, inputArgs);
+            String runCmd = String.format("java -Xmx256m -cp %s Main %s", userCodeParentPath, inputArgs);
 
             try {
-                Process runProcess = Runtime.getRuntime().exec(runCmd);
+                ProcessBuilder runProcessBuilder = new ProcessBuilder(runCmd.split(" "));
+                runProcessBuilder.directory(new File(userCodeParentPath));
+                Process runProcess = runProcessBuilder.start();
 
-                new Thread(() -> {
+                executorService.submit(() -> {
                     try {
-                        Thread.sleep(TIME_OUT);
-                        System.out.println("超时了，中断");
-                        runProcess.destroy();
+                        if (!runProcess.waitFor(TIME_OUT, TimeUnit.MILLISECONDS)) {
+                            System.out.println("超时了，中断");
+                            runProcess.destroyForcibly();
+                        }
                     } catch (InterruptedException e) {
-                        throw new RuntimeException(e);
+                        Thread.currentThread().interrupt();
                     }
-                }).start();
+                });
 
                 ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "运行");
                 System.out.println(executeMessage);
@@ -123,20 +111,19 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
                 return getErrorResponse(e);
             }
         }
+        executorService.shutdown();
 
-        // 目前该方法尚未实现返回逻辑，因此返回null
-
-        // 4）收集整理输出结果
+        // 4) 收集整理输出结果
         ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
         List<String> outputList = new ArrayList<>();
-        // 取用时最大值，便于判断是否超时
         long maxTime = 0;
+        boolean hasError = false;
         for (ExecuteMessage executeMessage : executeMessageList) {
             String errorMessage = executeMessage.getErrorMessage();
             if (StrUtil.isNotBlank(errorMessage)) {
                 executeCodeResponse.setMessage(errorMessage);
-                // 用户提交的代码执行中存在错误
                 executeCodeResponse.setStatus(3);
+                hasError = true;
                 break;
             }
             outputList.add(executeMessage.getMessage());
@@ -146,16 +133,15 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
             }
         }
 
-        // 正常运行完成
-        if (outputList.size() == executeMessageList.size()) {
+        if (!hasError && outputList.size() == inputList.size()) {
             executeCodeResponse.setStatus(1);
         }
 
         executeCodeResponse.setOutputList(outputList);
         JudgeInfo judgeInfo = new JudgeInfo();
         judgeInfo.setTime(maxTime);
-
         executeCodeResponse.setJudgeInfo(judgeInfo);
+
         //  5) 文件清理
         if (userCodeFile.getParentFile() != null) {
             boolean del = FileUtil.del(userCodeParentPath);
@@ -170,6 +156,16 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
         executeCodeResponse.setMessage(e.getMessage());
         // 表示代码沙箱错误
         executeCodeResponse.setStatus(2);
+        executeCodeResponse.setJudgeInfo(new JudgeInfo());
+        return executeCodeResponse;
+    }
+
+    private ExecuteCodeResponse getErrorResponse(String errorMessage) {
+        ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
+        executeCodeResponse.setOutputList(new ArrayList<>());
+        executeCodeResponse.setMessage(errorMessage);
+        // 表示用户代码执行错误
+        executeCodeResponse.setStatus(3);
         executeCodeResponse.setJudgeInfo(new JudgeInfo());
         return executeCodeResponse;
     }
